made synth polyphonic, added unison voices

--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,23 @@
           <div class="value-display" id="detune1-val">0</div>
         </div>
       </div>
+      <div class="controls">
+        <div class="control-group">
+          <label>Unison Voices</label>
+          <input type="range" id="unison-count1" min="1" max="8" step="1" value="1">
+          <div class="value-display" id="unison-count1-val">1</div>
+        </div>
+        <div class="control-group">
+          <label>Unison Detune</label>
+          <input type="range" id="unison-detune1" min="0" max="100" step="1" value="20">
+          <div class="value-display" id="unison-detune1-val">20</div>
+        </div>
+        <div class="control-group">
+          <label>Stereo Spread</label>
+          <input type="range" id="unison-spread1" min="0" max="100" step="1" value="50">
+          <div class="value-display" id="unison-spread1-val">50%</div>
+        </div>
+      </div>
       <div class="filter-section" id="filter1-section">
         <div class="controls">
           <div class="control-group">
@@ -90,6 +107,23 @@
           <label>Detune (cents)</label>
           <input type="range" id="detune2" min="-100" max="100" step="1" value="0">
           <div class="value-display" id="detune2-val">0</div>
+        </div>
+      </div>
+      <div class="controls">
+        <div class="control-group">
+          <label>Unison Voices</label>
+          <input type="range" id="unison-count2" min="1" max="8" step="1" value="1">
+          <div class="value-display" id="unison-count2-val">1</div>
+        </div>
+        <div class="control-group">
+          <label>Unison Detune</label>
+          <input type="range" id="unison-detune2" min="0" max="100" step="1" value="20">
+          <div class="value-display" id="unison-detune2-val">20</div>
+        </div>
+        <div class="control-group">
+          <label>Stereo Spread</label>
+          <input type="range" id="unison-spread2" min="0" max="100" step="1" value="50">
+          <div class="value-display" id="unison-spread2-val">50%</div>
         </div>
       </div>
       <div class="filter-section" id="filter2-section">
